--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,62 @@
-# Set the minimum CMake version required
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.20)
+project(TradingEngine VERSION 1.0 LANGUAGES CXX)
 
-# Set the project name and C++ standard
-project(TradingEngine VERSION 1.0)
+# Use C++20
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(ZeroMQ_DIR "C:/dev/vcpkg/installed/x64-windows/share/zeromq")
-set(cppzmq_DIR "C:/dev/vcpkg/installed/x64-windows/share/cppzmq")
-set(nlohmann_json_DIR "C:/dev/vcpkg/installed/x64-windows/share/nlohmann_json")
-set(unofficial-sqlite3_DIR "C:/dev/vcpkg/installed/x64-windows/share/unofficial-sqlite3")
-
-find_package(ZeroMQ CONFIG REQUIRED)
+# Dependencies
 find_package(cppzmq CONFIG REQUIRED)
+find_package(ZeroMQ CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(unofficial-sqlite3 CONFIG REQUIRED)
 
-link_directories("C:/dev/vcpkg/installed/x64-windows/lib")
+# --- Detect cppzmq target name ---
+if(TARGET cppzmq::cppzmq)
+    set(CPPZMQ_TARGET cppzmq::cppzmq)
+elseif(TARGET cppzmq)
+    set(CPPZMQ_TARGET cppzmq)
+else()
+    message(FATAL_ERROR "cppzmq package found, but no known target available.")
+endif()
 
-add_executable(engine src/main.cpp)
+# --- Detect ZeroMQ target name ---
+if(TARGET ZeroMQ::ZeroMQ)
+    set(ZMQ_TARGET ZeroMQ::ZeroMQ)
+elseif(TARGET libzmq)
+    set(ZMQ_TARGET libzmq)
+elseif(TARGET libzmq-static)
+    set(ZMQ_TARGET libzmq-static)
+else()
+    message(FATAL_ERROR "ZeroMQ package found, but no known target available.")
+endif()
 
-target_compile_definitions(engine PRIVATE SQLITE_DLL)
-
-target_link_libraries(engine PRIVATE
-    libzmq
-    nlohmann_json::nlohmann_json 
-    ${unofficial-sqlite3_LIBRARIES}
+# --- Add source files ---
+add_executable(engine
+    src/main.cpp
+    # Add other source files here
 )
 
-target_include_directories(engine PUBLIC include)
+# --- Link dependencies ---
+target_link_libraries(engine
+    PUBLIC
+        ${CPPZMQ_TARGET}
+        ${ZMQ_TARGET}
+        nlohmann_json::nlohmann_json
+        unofficial::sqlite3::sqlite3
+)
+
+# --- Include dirs ---
+target_include_directories(engine
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+# --- Optional warnings ---
+if(MSVC)
+    target_compile_options(engine PRIVATE /W4 /permissive-)
+else()
+    target_compile_options(engine PRIVATE -Wall -Wextra -pedantic)
+endif()
